--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Contoh file .env untuk konfigurasi aplikasi
 
 # Umum
-PLATFORM=webchat
+PLATFORM=Facebook
 FILENAME=Test KB UGM-EN.csv
 TESTER_NAME=Nama Penguji Baru
 GREETING=Halo
