--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
 instagrapi
 telethon
 art
-selenium
 colorama
-pandas
-openpyxl
-webdriver-manager
-jinja2
+
+# Web Automation
+selenium>=4.15.0
+webdriver-manager>=4.0.1
+
+# Data Processing
+pandas>=2.1.0
+openpyxl>=3.1.2
+
+# Report Generation
+jinja2>=3.1.2
+pytest>=7.4.0
+pytest-html>=4.1.1
+
+# Utilities
+python-dateutil>=2.8.2
+uuid>=1.30
+
+# Optional: For enhanced features
+# pillow>=10.0.0  # For image processing if needed
+# requests>=2.31.0  # For HTTP requests if needed
