--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ uuid>=1.30
 # Optional: For enhanced features
 # pillow>=10.0.0  # For image processing if needed
 requests>=2.31.0  # For HTTP requests if needed
+python-dotenv>=1.0.0 # For loading environment variables from .env file
