--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 instagrapi
 telethon
+python-dotenv>=1.0.0
 art
 colorama
 
@@ -18,9 +19,7 @@ pytest-html>=4.1.1
 
 # Utilities
 python-dateutil>=2.8.2
-uuid>=1.30
 
 # Optional: For enhanced features
 # pillow>=10.0.0  # For image processing if needed
-requests>=2.31.0  # For HTTP requests if needed
-python-dotenv>=1.0.0 # For loading environment variables from .env file
+requests>=2.31.0  # For HTTP requests
